commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44035,6 +44035,10 @@
     {
       "Date": "2022-10-25 07:00",
       "Rate": "19.8636"
+    },
+    {
+      "Date": "2022-10-25 08:00",
+      "Rate": "19.8964"
     }
   ]
 }
