commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44039,6 +44039,10 @@
     {
       "Date": "2022-10-25 08:00",
       "Rate": "19.8964"
+    },
+    {
+      "Date": "2022-10-25 09:00",
+      "Rate": "19.8688"
     }
   ]
 }
