commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44043,6 +44043,10 @@
     {
       "Date": "2022-10-25 09:00",
       "Rate": "19.8688"
+    },
+    {
+      "Date": "2022-10-25 10:00",
+      "Rate": "19.8729"
     }
   ]
 }
