commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44047,6 +44047,10 @@
     {
       "Date": "2022-10-25 10:00",
       "Rate": "19.8729"
+    },
+    {
+      "Date": "2022-10-25 11:00",
+      "Rate": "19.8749"
     }
   ]
 }
