commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44051,6 +44051,10 @@
     {
       "Date": "2022-10-25 11:00",
       "Rate": "19.8749"
+    },
+    {
+      "Date": "2022-10-25 12:00",
+      "Rate": "19.8881"
     }
   ]
 }
