commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44055,6 +44055,10 @@
     {
       "Date": "2022-10-25 12:00",
       "Rate": "19.8881"
+    },
+    {
+      "Date": "2022-10-25 13:00",
+      "Rate": "19.8679"
     }
   ]
 }
