commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44059,6 +44059,10 @@
     {
       "Date": "2022-10-25 13:00",
       "Rate": "19.8679"
+    },
+    {
+      "Date": "2022-10-25 14:00",
+      "Rate": "19.8822"
     }
   ]
 }
