--- a/indexRt.html
+++ b/indexRt.html
@@ -44063,6 +44063,10 @@
     {
       "Date": "2022-10-25 14:00",
       "Rate": "19.8822"
+    },
+    {
+      "Date": "2022-10-25 15:00",
+      "Rate": "19.8816"
     }
   ]
 }
