commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44067,6 +44067,10 @@
     {
       "Date": "2022-10-25 15:00",
       "Rate": "19.8816"
+    },
+    {
+      "Date": "2022-10-25 16:00",
+      "Rate": "19.8937"
     }
   ]
 }
