commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44071,6 +44071,10 @@
     {
       "Date": "2022-10-25 16:00",
       "Rate": "19.8937"
+    },
+    {
+      "Date": "2022-10-25 17:00",
+      "Rate": "19.8806"
     }
   ]
 }
