commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44075,6 +44075,10 @@
     {
       "Date": "2022-10-25 17:00",
       "Rate": "19.8806"
+    },
+    {
+      "Date": "2022-10-25 18:00",
+      "Rate": "19.8889"
     }
   ]
 }
