commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44079,6 +44079,10 @@
     {
       "Date": "2022-10-25 18:00",
       "Rate": "19.8889"
+    },
+    {
+      "Date": "2022-10-25 19:00",
+      "Rate": "19.8888"
     }
   ]
 }
