--- a/indexRt.html
+++ b/indexRt.html
@@ -44083,6 +44083,10 @@
     {
       "Date": "2022-10-25 19:00",
       "Rate": "19.8888"
+    },
+    {
+      "Date": "2022-10-25 20:00",
+      "Rate": "19.8756"
     }
   ]
 }
