commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44087,6 +44087,10 @@
     {
       "Date": "2022-10-25 20:00",
       "Rate": "19.8756"
+    },
+    {
+      "Date": "2022-10-25 21:00",
+      "Rate": "19.8780"
     }
   ]
 }
