commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44091,6 +44091,10 @@
     {
       "Date": "2022-10-25 21:00",
       "Rate": "19.8780"
+    },
+    {
+      "Date": "2022-10-25 22:00",
+      "Rate": "19.8851"
     }
   ]
 }
