commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44095,6 +44095,10 @@
     {
       "Date": "2022-10-25 22:00",
       "Rate": "19.8851"
+    },
+    {
+      "Date": "2022-10-25 23:00",
+      "Rate": "19.8814"
     }
   ]
 }
