commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44099,6 +44099,10 @@
     {
       "Date": "2022-10-25 23:00",
       "Rate": "19.8814"
+    },
+    {
+      "Date": "2022-10-26 00:00",
+      "Rate": "19.8585"
     }
   ]
 }
