commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44103,6 +44103,10 @@
     {
       "Date": "2022-10-26 00:00",
       "Rate": "19.8585"
+    },
+    {
+      "Date": "2022-10-26 01:00",
+      "Rate": "19.8532"
     }
   ]
 }
