commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44107,6 +44107,10 @@
     {
       "Date": "2022-10-26 01:00",
       "Rate": "19.8532"
+    },
+    {
+      "Date": "2022-10-26 02:00",
+      "Rate": "19.8423"
     }
   ]
 }
