commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44111,6 +44111,10 @@
     {
       "Date": "2022-10-26 02:00",
       "Rate": "19.8423"
+    },
+    {
+      "Date": "2022-10-26 03:00",
+      "Rate": "19.8363"
     }
   ]
 }
