--- a/indexRt.html
+++ b/indexRt.html
@@ -44115,6 +44115,10 @@
     {
       "Date": "2022-10-26 03:00",
       "Rate": "19.8363"
+    },
+    {
+      "Date": "2022-10-26 04:00",
+      "Rate": "19.8226"
     }
   ]
 }
