commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44119,6 +44119,10 @@
     {
       "Date": "2022-10-26 04:00",
       "Rate": "19.8226"
+    },
+    {
+      "Date": "2022-10-26 05:00",
+      "Rate": "19.8384"
     }
   ]
 }
