--- a/indexRt.html
+++ b/indexRt.html
@@ -44123,6 +44123,10 @@
     {
       "Date": "2022-10-26 05:00",
       "Rate": "19.8384"
+    },
+    {
+      "Date": "2022-10-26 06:00",
+      "Rate": "19.8466"
     }
   ]
 }
