commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44127,6 +44127,10 @@
     {
       "Date": "2022-10-26 06:00",
       "Rate": "19.8466"
+    },
+    {
+      "Date": "2022-10-26 07:00",
+      "Rate": "19.8507"
     }
   ]
 }
