commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44131,6 +44131,10 @@
     {
       "Date": "2022-10-26 07:00",
       "Rate": "19.8507"
+    },
+    {
+      "Date": "2022-10-26 08:00",
+      "Rate": "19.8702"
     }
   ]
 }
