commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44135,6 +44135,10 @@
     {
       "Date": "2022-10-26 08:00",
       "Rate": "19.8702"
+    },
+    {
+      "Date": "2022-10-26 09:00",
+      "Rate": "19.8676"
     }
   ]
 }
