commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44139,6 +44139,10 @@
     {
       "Date": "2022-10-26 09:00",
       "Rate": "19.8676"
+    },
+    {
+      "Date": "2022-10-26 10:00",
+      "Rate": "19.8825"
     }
   ]
 }
