--- a/indexRt.html
+++ b/indexRt.html
@@ -44143,6 +44143,10 @@
     {
       "Date": "2022-10-26 10:00",
       "Rate": "19.8825"
+    },
+    {
+      "Date": "2022-10-26 11:00",
+      "Rate": "19.8983"
     }
   ]
 }
