--- a/indexRt.html
+++ b/indexRt.html
@@ -44147,6 +44147,10 @@
     {
       "Date": "2022-10-26 11:00",
       "Rate": "19.8983"
+    },
+    {
+      "Date": "2022-10-26 12:00",
+      "Rate": "19.9504"
     }
   ]
 }
