--- a/indexRt.html
+++ b/indexRt.html
@@ -44151,6 +44151,10 @@
     {
       "Date": "2022-10-26 12:00",
       "Rate": "19.9504"
+    },
+    {
+      "Date": "2022-10-26 13:00",
+      "Rate": "19.9422"
     }
   ]
 }
