commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44155,6 +44155,10 @@
     {
       "Date": "2022-10-26 13:00",
       "Rate": "19.9422"
+    },
+    {
+      "Date": "2022-10-26 14:00",
+      "Rate": "19.9404"
     }
   ]
 }
