commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44159,6 +44159,10 @@
     {
       "Date": "2022-10-26 14:00",
       "Rate": "19.9404"
+    },
+    {
+      "Date": "2022-10-26 15:00",
+      "Rate": "19.9504"
     }
   ]
 }
