commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44163,6 +44163,10 @@
     {
       "Date": "2022-10-26 15:00",
       "Rate": "19.9504"
+    },
+    {
+      "Date": "2022-10-26 16:00",
+      "Rate": "19.9561"
     }
   ]
 }
