--- a/indexRt.html
+++ b/indexRt.html
@@ -44167,6 +44167,10 @@
     {
       "Date": "2022-10-26 16:00",
       "Rate": "19.9561"
+    },
+    {
+      "Date": "2022-10-26 17:00",
+      "Rate": "19.9455"
     }
   ]
 }
