commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44171,6 +44171,10 @@
     {
       "Date": "2022-10-26 17:00",
       "Rate": "19.9455"
+    },
+    {
+      "Date": "2022-10-26 18:00",
+      "Rate": "19.9844"
     }
   ]
 }
