--- a/indexRt.html
+++ b/indexRt.html
@@ -44175,6 +44175,10 @@
     {
       "Date": "2022-10-26 18:00",
       "Rate": "19.9844"
+    },
+    {
+      "Date": "2022-10-26 19:00",
+      "Rate": "20.0173"
     }
   ]
 }
