commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44179,6 +44179,10 @@
     {
       "Date": "2022-10-26 19:00",
       "Rate": "20.0173"
+    },
+    {
+      "Date": "2022-10-26 20:00",
+      "Rate": "20.0066"
     }
   ]
 }
