--- a/indexRt.html
+++ b/indexRt.html
@@ -44183,6 +44183,10 @@
     {
       "Date": "2022-10-26 20:00",
       "Rate": "20.0066"
+    },
+    {
+      "Date": "2022-10-26 21:00",
+      "Rate": "19.9957"
     }
   ]
 }
