commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44187,6 +44187,10 @@
     {
       "Date": "2022-10-26 21:00",
       "Rate": "19.9957"
+    },
+    {
+      "Date": "2022-10-26 22:00",
+      "Rate": "19.9894"
     }
   ]
 }
