--- a/indexRt.html
+++ b/indexRt.html
@@ -44191,6 +44191,10 @@
     {
       "Date": "2022-10-26 22:00",
       "Rate": "19.9894"
+    },
+    {
+      "Date": "2022-10-26 23:00",
+      "Rate": "19.9944"
     }
   ]
 }
