commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44195,6 +44195,10 @@
     {
       "Date": "2022-10-26 23:00",
       "Rate": "19.9944"
+    },
+    {
+      "Date": "2022-10-27 08:00",
+      "Rate": "19.8434"
     }
   ]
 }
