commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44199,6 +44199,10 @@
     {
       "Date": "2022-10-27 08:00",
       "Rate": "19.8434"
+    },
+    {
+      "Date": "2022-10-27 09:00",
+      "Rate": "19.8399"
     }
   ]
 }
