commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44203,6 +44203,10 @@
     {
       "Date": "2022-10-27 09:00",
       "Rate": "19.8399"
+    },
+    {
+      "Date": "2022-10-27 10:00",
+      "Rate": "19.8476"
     }
   ]
 }
