--- a/indexRt.html
+++ b/indexRt.html
@@ -44207,6 +44207,10 @@
     {
       "Date": "2022-10-27 10:00",
       "Rate": "19.8476"
+    },
+    {
+      "Date": "2022-10-27 11:00",
+      "Rate": "19.8369"
     }
   ]
 }
