commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44211,6 +44211,10 @@
     {
       "Date": "2022-10-27 11:00",
       "Rate": "19.8369"
+    },
+    {
+      "Date": "2022-10-27 12:00",
+      "Rate": "19.8590"
     }
   ]
 }
