commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44215,6 +44215,10 @@
     {
       "Date": "2022-10-27 12:00",
       "Rate": "19.8590"
+    },
+    {
+      "Date": "2022-10-27 13:00",
+      "Rate": "19.8374"
     }
   ]
 }
