commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44219,6 +44219,10 @@
     {
       "Date": "2022-10-27 13:00",
       "Rate": "19.8374"
+    },
+    {
+      "Date": "2022-10-27 14:00",
+      "Rate": "19.8365"
     }
   ]
 }
