commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44223,6 +44223,10 @@
     {
       "Date": "2022-10-27 14:00",
       "Rate": "19.8365"
+    },
+    {
+      "Date": "2022-10-27 15:00",
+      "Rate": "19.8461"
     }
   ]
 }
