commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44227,6 +44227,10 @@
     {
       "Date": "2022-10-27 15:00",
       "Rate": "19.8461"
+    },
+    {
+      "Date": "2022-10-27 16:00",
+      "Rate": "19.8366"
     }
   ]
 }
