commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44231,6 +44231,10 @@
     {
       "Date": "2022-10-27 16:00",
       "Rate": "19.8366"
+    },
+    {
+      "Date": "2022-10-27 17:00",
+      "Rate": "19.8453"
     }
   ]
 }
