--- a/indexRt.html
+++ b/indexRt.html
@@ -44235,6 +44235,10 @@
     {
       "Date": "2022-10-27 17:00",
       "Rate": "19.8453"
+    },
+    {
+      "Date": "2022-10-28 07:00",
+      "Rate": "19.8200"
     }
   ]
 }
