commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44239,6 +44239,10 @@
     {
       "Date": "2022-10-28 07:00",
       "Rate": "19.8200"
+    },
+    {
+      "Date": "2022-10-28 08:00",
+      "Rate": "19.8163"
     }
   ]
 }
