commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44243,6 +44243,10 @@
     {
       "Date": "2022-10-28 08:00",
       "Rate": "19.8163"
+    },
+    {
+      "Date": "2022-10-28 09:00",
+      "Rate": "19.8266"
     }
   ]
 }
