commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44247,6 +44247,10 @@
     {
       "Date": "2022-10-28 09:00",
       "Rate": "19.8266"
+    },
+    {
+      "Date": "2022-10-28 10:00",
+      "Rate": "19.8212"
     }
   ]
 }
