--- a/indexRt.html
+++ b/indexRt.html
@@ -44251,6 +44251,10 @@
     {
       "Date": "2022-10-28 10:00",
       "Rate": "19.8212"
+    },
+    {
+      "Date": "2022-10-28 11:00",
+      "Rate": "19.8234"
     }
   ]
 }
