commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44255,6 +44255,10 @@
     {
       "Date": "2022-10-28 11:00",
       "Rate": "19.8234"
+    },
+    {
+      "Date": "2022-10-28 12:00",
+      "Rate": "19.8038"
     }
   ]
 }
