commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44259,6 +44259,10 @@
     {
       "Date": "2022-10-28 12:00",
       "Rate": "19.8038"
+    },
+    {
+      "Date": "2022-10-28 13:00",
+      "Rate": "19.7952"
     }
   ]
 }
