commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44263,6 +44263,10 @@
     {
       "Date": "2022-10-28 13:00",
       "Rate": "19.7952"
+    },
+    {
+      "Date": "2022-10-28 14:00",
+      "Rate": "19.7957"
     }
   ]
 }
