commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44267,6 +44267,10 @@
     {
       "Date": "2022-10-28 14:00",
       "Rate": "19.7957"
+    },
+    {
+      "Date": "2022-10-28 15:00",
+      "Rate": "19.8001"
     }
   ]
 }
