commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44271,6 +44271,10 @@
     {
       "Date": "2022-10-28 15:00",
       "Rate": "19.8001"
+    },
+    {
+      "Date": "2022-10-28 16:00",
+      "Rate": "19.8001"
     }
   ]
 }
