commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44275,6 +44275,10 @@
     {
       "Date": "2022-10-28 16:00",
       "Rate": "19.8001"
+    },
+    {
+      "Date": "2022-10-31 07:00",
+      "Rate": "19.9181"
     }
   ]
 }
