commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44279,6 +44279,10 @@
     {
       "Date": "2022-10-31 07:00",
       "Rate": "19.9181"
+    },
+    {
+      "Date": "2022-10-31 07:02",
+      "Rate": "19.8949"
     }
   ]
 }
