commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44283,6 +44283,10 @@
     {
       "Date": "2022-10-31 07:02",
       "Rate": "19.8949"
+    },
+    {
+      "Date": "2022-10-31 08:00",
+      "Rate": "19.8421"
     }
   ]
 }
