commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44287,6 +44287,10 @@
     {
       "Date": "2022-10-31 08:00",
       "Rate": "19.8421"
+    },
+    {
+      "Date": "2022-10-31 09:00",
+      "Rate": "19.8487"
     }
   ]
 }
