--- a/indexRt.html
+++ b/indexRt.html
@@ -44291,6 +44291,10 @@
     {
       "Date": "2022-10-31 09:00",
       "Rate": "19.8487"
+    },
+    {
+      "Date": "2022-10-31 10:00",
+      "Rate": "19.8282"
     }
   ]
 }
