--- a/indexRt.html
+++ b/indexRt.html
@@ -44295,6 +44295,10 @@
     {
       "Date": "2022-10-31 10:00",
       "Rate": "19.8282"
+    },
+    {
+      "Date": "2022-10-31 11:00",
+      "Rate": "19.8022"
     }
   ]
 }
