commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44299,6 +44299,10 @@
     {
       "Date": "2022-10-31 11:00",
       "Rate": "19.8022"
+    },
+    {
+      "Date": "2022-10-31 12:00",
+      "Rate": "19.8107"
     }
   ]
 }
