commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44303,6 +44303,10 @@
     {
       "Date": "2022-10-31 12:00",
       "Rate": "19.8107"
+    },
+    {
+      "Date": "2022-10-31 13:00",
+      "Rate": "19.8144"
     }
   ]
 }
