commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44307,6 +44307,10 @@
     {
       "Date": "2022-10-31 13:00",
       "Rate": "19.8144"
+    },
+    {
+      "Date": "2022-10-31 14:00",
+      "Rate": "19.8115"
     }
   ]
 }
