commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44311,6 +44311,10 @@
     {
       "Date": "2022-10-31 14:00",
       "Rate": "19.8115"
+    },
+    {
+      "Date": "2022-10-31 15:00",
+      "Rate": "19.8209"
     }
   ]
 }
