commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44315,6 +44315,10 @@
     {
       "Date": "2022-10-31 15:00",
       "Rate": "19.8209"
+    },
+    {
+      "Date": "2022-10-31 16:00",
+      "Rate": "19.8145"
     }
   ]
 }
