commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44319,6 +44319,10 @@
     {
       "Date": "2022-10-31 16:00",
       "Rate": "19.8145"
+    },
+    {
+      "Date": "2022-10-31 17:00",
+      "Rate": "19.8082"
     }
   ]
 }
