commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44323,6 +44323,10 @@
     {
       "Date": "2022-10-31 17:00",
       "Rate": "19.8082"
+    },
+    {
+      "Date": "2022-10-31 18:00",
+      "Rate": "19.8121"
     }
   ]
 }
