commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44327,6 +44327,10 @@
     {
       "Date": "2022-10-31 18:00",
       "Rate": "19.8121"
+    },
+    {
+      "Date": "2022-10-31 19:00",
+      "Rate": "19.7940"
     }
   ]
 }
