commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44331,6 +44331,10 @@
     {
       "Date": "2022-10-31 19:00",
       "Rate": "19.7940"
+    },
+    {
+      "Date": "2022-10-31 20:00",
+      "Rate": "19.7849"
     }
   ]
 }
