commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44335,6 +44335,10 @@
     {
       "Date": "2022-10-31 20:00",
       "Rate": "19.7849"
+    },
+    {
+      "Date": "2022-10-31 21:00",
+      "Rate": "19.7826"
     }
   ]
 }
