commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44339,6 +44339,10 @@
     {
       "Date": "2022-10-31 21:00",
       "Rate": "19.7826"
+    },
+    {
+      "Date": "2022-10-31 22:00",
+      "Rate": "19.7860"
     }
   ]
 }
