commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44343,6 +44343,10 @@
     {
       "Date": "2022-10-31 22:00",
       "Rate": "19.7860"
+    },
+    {
+      "Date": "2022-10-31 23:00",
+      "Rate": "19.7779"
     }
   ]
 }
