commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44347,6 +44347,10 @@
     {
       "Date": "2022-10-31 23:00",
       "Rate": "19.7779"
+    },
+    {
+      "Date": "2022-11-01 00:00",
+      "Rate": "19.7628"
     }
   ]
 }
