commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44351,6 +44351,10 @@
     {
       "Date": "2022-11-01 00:00",
       "Rate": "19.7628"
+    },
+    {
+      "Date": "2022-11-01 01:00",
+      "Rate": "19.7710"
     }
   ]
 }
