commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44355,6 +44355,10 @@
     {
       "Date": "2022-11-01 01:00",
       "Rate": "19.7710"
+    },
+    {
+      "Date": "2022-11-01 02:00",
+      "Rate": "19.7641"
     }
   ]
 }
