commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44359,6 +44359,10 @@
     {
       "Date": "2022-11-01 02:00",
       "Rate": "19.7641"
+    },
+    {
+      "Date": "2022-11-01 03:00",
+      "Rate": "19.7606"
     }
   ]
 }
