--- a/indexRt.html
+++ b/indexRt.html
@@ -44363,6 +44363,10 @@
     {
       "Date": "2022-11-01 03:00",
       "Rate": "19.7606"
+    },
+    {
+      "Date": "2022-11-01 04:00",
+      "Rate": "19.7655"
     }
   ]
 }
