--- a/indexRt.html
+++ b/indexRt.html
@@ -44367,6 +44367,10 @@
     {
       "Date": "2022-11-01 04:00",
       "Rate": "19.7655"
+    },
+    {
+      "Date": "2022-11-01 05:00",
+      "Rate": "19.7685"
     }
   ]
 }
