commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44371,6 +44371,10 @@
     {
       "Date": "2022-11-01 05:00",
       "Rate": "19.7685"
+    },
+    {
+      "Date": "2022-11-01 06:00",
+      "Rate": "19.7265"
     }
   ]
 }
