commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44375,6 +44375,10 @@
     {
       "Date": "2022-11-01 06:00",
       "Rate": "19.7265"
+    },
+    {
+      "Date": "2022-11-01 07:00",
+      "Rate": "19.7055"
     }
   ]
 }
