commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44379,6 +44379,10 @@
     {
       "Date": "2022-11-01 07:00",
       "Rate": "19.7055"
+    },
+    {
+      "Date": "2022-11-01 08:00",
+      "Rate": "19.7283"
     }
   ]
 }
