commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44383,6 +44383,10 @@
     {
       "Date": "2022-11-01 08:00",
       "Rate": "19.7283"
+    },
+    {
+      "Date": "2022-11-01 09:00",
+      "Rate": "19.7380"
     }
   ]
 }
