commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44387,6 +44387,10 @@
     {
       "Date": "2022-11-01 09:00",
       "Rate": "19.7380"
+    },
+    {
+      "Date": "2022-11-01 10:00",
+      "Rate": "19.7584"
     }
   ]
 }
