commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44391,6 +44391,10 @@
     {
       "Date": "2022-11-01 10:00",
       "Rate": "19.7584"
+    },
+    {
+      "Date": "2022-11-01 11:00",
+      "Rate": "19.7458"
     }
   ]
 }
