--- a/indexRt.html
+++ b/indexRt.html
@@ -44395,6 +44395,10 @@
     {
       "Date": "2022-11-01 11:00",
       "Rate": "19.7458"
+    },
+    {
+      "Date": "2022-11-01 12:00",
+      "Rate": "19.7189"
     }
   ]
 }
