--- a/indexRt.html
+++ b/indexRt.html
@@ -44399,6 +44399,10 @@
     {
       "Date": "2022-11-01 12:00",
       "Rate": "19.7189"
+    },
+    {
+      "Date": "2022-11-01 13:00",
+      "Rate": "19.7195"
     }
   ]
 }
