commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44403,6 +44403,10 @@
     {
       "Date": "2022-11-01 13:00",
       "Rate": "19.7195"
+    },
+    {
+      "Date": "2022-11-01 14:00",
+      "Rate": "19.7426"
     }
   ]
 }
