commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44407,6 +44407,10 @@
     {
       "Date": "2022-11-01 14:00",
       "Rate": "19.7426"
+    },
+    {
+      "Date": "2022-11-01 15:00",
+      "Rate": "19.7492"
     }
   ]
 }
