commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44411,6 +44411,10 @@
     {
       "Date": "2022-11-01 15:00",
       "Rate": "19.7492"
+    },
+    {
+      "Date": "2022-11-01 16:00",
+      "Rate": "19.7422"
     }
   ]
 }
