--- a/indexRt.html
+++ b/indexRt.html
@@ -44415,6 +44415,10 @@
     {
       "Date": "2022-11-01 16:00",
       "Rate": "19.7422"
+    },
+    {
+      "Date": "2022-11-01 17:00",
+      "Rate": "19.7385"
     }
   ]
 }
