commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44419,6 +44419,10 @@
     {
       "Date": "2022-11-01 17:00",
       "Rate": "19.7385"
+    },
+    {
+      "Date": "2022-11-01 18:00",
+      "Rate": "19.7244"
     }
   ]
 }
