commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44423,6 +44423,10 @@
     {
       "Date": "2022-11-01 18:00",
       "Rate": "19.7244"
+    },
+    {
+      "Date": "2022-11-01 19:00",
+      "Rate": "19.7225"
     }
   ]
 }
