--- a/indexRt.html
+++ b/indexRt.html
@@ -44427,6 +44427,10 @@
     {
       "Date": "2022-11-01 19:00",
       "Rate": "19.7225"
+    },
+    {
+      "Date": "2022-11-01 20:00",
+      "Rate": "19.7175"
     }
   ]
 }
