commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44431,6 +44431,10 @@
     {
       "Date": "2022-11-01 20:00",
       "Rate": "19.7175"
+    },
+    {
+      "Date": "2022-11-01 21:00",
+      "Rate": "19.7210"
     }
   ]
 }
