commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44435,6 +44435,10 @@
     {
       "Date": "2022-11-01 21:00",
       "Rate": "19.7210"
+    },
+    {
+      "Date": "2022-11-01 22:00",
+      "Rate": "19.7164"
     }
   ]
 }
