commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44439,6 +44439,10 @@
     {
       "Date": "2022-11-01 22:00",
       "Rate": "19.7164"
+    },
+    {
+      "Date": "2022-11-01 23:00",
+      "Rate": "19.7171"
     }
   ]
 }
