--- a/indexRt.html
+++ b/indexRt.html
@@ -44443,6 +44443,10 @@
     {
       "Date": "2022-11-01 23:00",
       "Rate": "19.7171"
+    },
+    {
+      "Date": "2022-11-02 00:00",
+      "Rate": "19.7164"
     }
   ]
 }
