--- a/indexRt.html
+++ b/indexRt.html
@@ -44447,6 +44447,10 @@
     {
       "Date": "2022-11-02 00:00",
       "Rate": "19.7164"
+    },
+    {
+      "Date": "2022-11-02 01:00",
+      "Rate": "19.7086"
     }
   ]
 }
