commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44451,6 +44451,10 @@
     {
       "Date": "2022-11-02 01:00",
       "Rate": "19.7086"
+    },
+    {
+      "Date": "2022-11-02 02:00",
+      "Rate": "19.7040"
     }
   ]
 }
