commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44455,6 +44455,10 @@
     {
       "Date": "2022-11-02 02:00",
       "Rate": "19.7040"
+    },
+    {
+      "Date": "2022-11-02 03:00",
+      "Rate": "19.7082"
     }
   ]
 }
