commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44459,6 +44459,10 @@
     {
       "Date": "2022-11-02 03:00",
       "Rate": "19.7082"
+    },
+    {
+      "Date": "2022-11-02 04:00",
+      "Rate": "19.7006"
     }
   ]
 }
