commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44463,6 +44463,10 @@
     {
       "Date": "2022-11-02 04:00",
       "Rate": "19.7006"
+    },
+    {
+      "Date": "2022-11-02 05:00",
+      "Rate": "19.7033"
     }
   ]
 }
