--- a/indexRt.html
+++ b/indexRt.html
@@ -44467,6 +44467,10 @@
     {
       "Date": "2022-11-02 05:00",
       "Rate": "19.7033"
+    },
+    {
+      "Date": "2022-11-02 06:00",
+      "Rate": "19.6897"
     }
   ]
 }
