commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44471,6 +44471,10 @@
     {
       "Date": "2022-11-02 06:00",
       "Rate": "19.6897"
+    },
+    {
+      "Date": "2022-11-02 07:00",
+      "Rate": "19.6570"
     }
   ]
 }
