commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44475,6 +44475,10 @@
     {
       "Date": "2022-11-02 07:00",
       "Rate": "19.6570"
+    },
+    {
+      "Date": "2022-11-02 08:00",
+      "Rate": "19.6847"
     }
   ]
 }
