commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44479,6 +44479,10 @@
     {
       "Date": "2022-11-02 08:00",
       "Rate": "19.6847"
+    },
+    {
+      "Date": "2022-11-02 09:00",
+      "Rate": "19.6657"
     }
   ]
 }
