commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44483,6 +44483,10 @@
     {
       "Date": "2022-11-02 09:00",
       "Rate": "19.6657"
+    },
+    {
+      "Date": "2022-11-02 10:00",
+      "Rate": "19.6455"
     }
   ]
 }
