--- a/indexRt.html
+++ b/indexRt.html
@@ -44487,6 +44487,10 @@
     {
       "Date": "2022-11-02 10:00",
       "Rate": "19.6455"
+    },
+    {
+      "Date": "2022-11-02 11:00",
+      "Rate": "19.6416"
     }
   ]
 }
