commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44491,6 +44491,10 @@
     {
       "Date": "2022-11-02 11:00",
       "Rate": "19.6416"
+    },
+    {
+      "Date": "2022-11-02 12:00",
+      "Rate": "19.6274"
     }
   ]
 }
