commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44495,6 +44495,10 @@
     {
       "Date": "2022-11-02 12:00",
       "Rate": "19.6274"
+    },
+    {
+      "Date": "2022-11-02 13:00",
+      "Rate": "19.6821"
     }
   ]
 }
