commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44499,6 +44499,10 @@
     {
       "Date": "2022-11-02 13:00",
       "Rate": "19.6821"
+    },
+    {
+      "Date": "2022-11-02 14:00",
+      "Rate": "19.6729"
     }
   ]
 }
