--- a/indexRt.html
+++ b/indexRt.html
@@ -44503,6 +44503,10 @@
     {
       "Date": "2022-11-02 14:00",
       "Rate": "19.6729"
+    },
+    {
+      "Date": "2022-11-02 15:00",
+      "Rate": "19.6716"
     }
   ]
 }
