commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44507,6 +44507,10 @@
     {
       "Date": "2022-11-02 15:00",
       "Rate": "19.6716"
+    },
+    {
+      "Date": "2022-11-02 16:00",
+      "Rate": "19.6961"
     }
   ]
 }
