commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44511,6 +44511,10 @@
     {
       "Date": "2022-11-02 16:00",
       "Rate": "19.6961"
+    },
+    {
+      "Date": "2022-11-02 17:00",
+      "Rate": "19.6938"
     }
   ]
 }
