commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44515,6 +44515,10 @@
     {
       "Date": "2022-11-02 17:00",
       "Rate": "19.6938"
+    },
+    {
+      "Date": "2022-11-02 17:02",
+      "Rate": "19.6938"
     }
   ]
 }
