--- a/indexRt.html
+++ b/indexRt.html
@@ -44519,6 +44519,10 @@
     {
       "Date": "2022-11-02 17:02",
       "Rate": "19.6938"
+    },
+    {
+      "Date": "2022-11-02 18:00",
+      "Rate": "19.6700"
     }
   ]
 }
