commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44523,6 +44523,10 @@
     {
       "Date": "2022-11-02 18:00",
       "Rate": "19.6700"
+    },
+    {
+      "Date": "2022-11-02 19:00",
+      "Rate": "19.6618"
     }
   ]
 }
