commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44527,6 +44527,10 @@
     {
       "Date": "2022-11-02 19:00",
       "Rate": "19.6618"
+    },
+    {
+      "Date": "2022-11-02 20:00",
+      "Rate": "19.6656"
     }
   ]
 }
