commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44531,6 +44531,10 @@
     {
       "Date": "2022-11-02 20:00",
       "Rate": "19.6656"
+    },
+    {
+      "Date": "2022-11-02 21:00",
+      "Rate": "19.6515"
     }
   ]
 }
