commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44535,6 +44535,10 @@
     {
       "Date": "2022-11-02 21:00",
       "Rate": "19.6515"
+    },
+    {
+      "Date": "2022-11-02 22:00",
+      "Rate": "19.6428"
     }
   ]
 }
