commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44539,6 +44539,10 @@
     {
       "Date": "2022-11-02 22:00",
       "Rate": "19.6428"
+    },
+    {
+      "Date": "2022-11-02 23:00",
+      "Rate": "19.6430"
     }
   ]
 }
