commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44543,6 +44543,10 @@
     {
       "Date": "2022-11-02 23:00",
       "Rate": "19.6430"
+    },
+    {
+      "Date": "2022-11-03 00:00",
+      "Rate": "19.6521"
     }
   ]
 }
