commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44547,6 +44547,10 @@
     {
       "Date": "2022-11-03 00:00",
       "Rate": "19.6521"
+    },
+    {
+      "Date": "2022-11-03 01:00",
+      "Rate": "19.6844"
     }
   ]
 }
