commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44551,6 +44551,10 @@
     {
       "Date": "2022-11-03 01:00",
       "Rate": "19.6844"
+    },
+    {
+      "Date": "2022-11-03 02:00",
+      "Rate": "19.6620"
     }
   ]
 }
