commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44555,6 +44555,10 @@
     {
       "Date": "2022-11-03 02:00",
       "Rate": "19.6620"
+    },
+    {
+      "Date": "2022-11-03 03:00",
+      "Rate": "19.6833"
     }
   ]
 }
