--- a/indexRt.html
+++ b/indexRt.html
@@ -44559,6 +44559,10 @@
     {
       "Date": "2022-11-03 03:00",
       "Rate": "19.6833"
+    },
+    {
+      "Date": "2022-11-03 04:00",
+      "Rate": "19.7081"
     }
   ]
 }
