--- a/indexRt.html
+++ b/indexRt.html
@@ -44563,6 +44563,10 @@
     {
       "Date": "2022-11-03 04:00",
       "Rate": "19.7081"
+    },
+    {
+      "Date": "2022-11-03 05:00",
+      "Rate": "19.7331"
     }
   ]
 }
