--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -105,19 +105,19 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.22,
-  "buy": 19.69,
-  "date": "2022-11-03 07:50:16",
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-11-03 08:10:16",
   "prev_buy": 20.33,
   "prev_sell": 19.81
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 20.251,
-  "buy": 19.2405,
-  "date": "2022-11-03 07:50:16",
-  "prev_buy": 20.2099,
-  "prev_sell": 19.1994
+  "sell": 20.2394,
+  "buy": 19.2289,
+  "date": "2022-11-03 08:00:26",
+  "prev_buy": 20.215,
+  "prev_sell": 19.202
 },{
   "bank_id": 16,
   "bank_name": "BANREGIO",
@@ -129,8 +129,8 @@
 },{
   "bank_id": 17,
   "bank_name": "DOF",
-  "sell": 19.5585,
-  "buy": 19.5585,
+  "sell": " 19.7463",
+  "buy": " 19.7463",
   "date": "2022-06-03 07:10:28",
   "prev_buy": 19.5585,
   "prev_sell": 19.5585
@@ -153,8 +153,8 @@
 },{
   "bank_id": 20,
   "bank_name": "SAT",
-  "sell": 19.7463,
-  "buy": 19.7463,
+  "sell": " 19.7463",
+  "buy": " 19.7463",
   "date": "2022-11-03 02:10:20",
   "prev_buy": 19.8245,
   "prev_sell": 19.8245
