--- a/indexRt.html
+++ b/indexRt.html
@@ -44567,6 +44567,10 @@
     {
       "Date": "2022-11-03 05:00",
       "Rate": "19.7331"
+    },
+    {
+      "Date": "2022-11-03 06:00",
+      "Rate": "19.7748"
     }
   ]
 }
