commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44571,6 +44571,10 @@
     {
       "Date": "2022-11-03 06:00",
       "Rate": "19.7748"
+    },
+    {
+      "Date": "2022-11-03 07:00",
+      "Rate": "19.7423"
     }
   ]
 }
