commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44575,6 +44575,10 @@
     {
       "Date": "2022-11-03 07:00",
       "Rate": "19.7423"
+    },
+    {
+      "Date": "2022-11-03 08:00",
+      "Rate": "19.6805"
     }
   ]
 }
