commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44579,6 +44579,10 @@
     {
       "Date": "2022-11-03 08:00",
       "Rate": "19.6805"
+    },
+    {
+      "Date": "2022-11-03 09:00",
+      "Rate": "19.6757"
     }
   ]
 }
