--- a/indexRt.html
+++ b/indexRt.html
@@ -44583,6 +44583,10 @@
     {
       "Date": "2022-11-03 09:00",
       "Rate": "19.6757"
+    },
+    {
+      "Date": "2022-11-03 10:00",
+      "Rate": "19.6864"
     }
   ]
 }
