commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44587,6 +44587,10 @@
     {
       "Date": "2022-11-03 10:00",
       "Rate": "19.6864"
+    },
+    {
+      "Date": "2022-11-03 11:00",
+      "Rate": "19.6696"
     }
   ]
 }
