commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44591,6 +44591,10 @@
     {
       "Date": "2022-11-03 11:00",
       "Rate": "19.6696"
+    },
+    {
+      "Date": "2022-11-03 12:00",
+      "Rate": "19.6456"
     }
   ]
 }
