commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44595,6 +44595,10 @@
     {
       "Date": "2022-11-03 12:00",
       "Rate": "19.6456"
+    },
+    {
+      "Date": "2022-11-03 13:00",
+      "Rate": "19.6488"
     }
   ]
 }
