commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44599,6 +44599,10 @@
     {
       "Date": "2022-11-03 13:00",
       "Rate": "19.6488"
+    },
+    {
+      "Date": "2022-11-03 14:00",
+      "Rate": "19.6550"
     }
   ]
 }
