--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,9 +33,9 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 20.00405,
-  "buy": 19.2521,
-  "date": "2022-11-03 16:30:10",
+  "sell": 20.014225,
+  "buy": 19.23446,
+  "date": "2022-11-03 17:30:11",
   "prev_buy": 20.027249,
   "prev_sell": 19.286106
 },{
@@ -57,9 +57,9 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.90575,
-  "buy": 19.350325,
-  "date": "2022-11-03 16:30:14",
+  "sell": 19.915875,
+  "buy": 19.332595,
+  "date": "2022-11-03 17:30:13",
   "prev_buy": 19.928835,
   "prev_sell": 19.3845045
 },{
@@ -89,9 +89,9 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 20.0532,
-  "buy": 19.2521,
-  "date": "2022-11-03 16:30:16",
+  "sell": 20.0634,
+  "buy": 19.23446,
+  "date": "2022-11-03 17:30:15",
   "prev_buy": 20.076456,
   "prev_sell": 19.286106
 },{
@@ -105,11 +105,11 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.33,
-  "buy": 19.81,
-  "date": "2022-11-03 17:10:16",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "sell": 20.22,
+  "buy": 19.69,
+  "date": "2022-11-03 17:30:16",
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.97456,
-  "buy": 19.1440525,
-  "date": "2022-11-03 16:30:22",
+  "sell": 19.98472,
+  "buy": 19.1265115,
+  "date": "2022-11-03 17:30:21",
   "prev_buy": 19.9977248,
   "prev_sell": 19.17786765
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 20.01388,
-  "buy": 19.1833425,
-  "date": "2022-11-03 16:30:22",
+  "sell": 20.02406,
+  "buy": 19.1657655,
+  "date": "2022-11-03 17:30:22",
   "prev_buy": 20.0370904,
   "prev_sell": 19.21722705
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 20.02371,
-  "buy": 19.0065375,
-  "date": "2022-11-03 16:30:23",
+  "sell": 20.033895,
+  "buy": 18.9891225,
+  "date": "2022-11-03 17:30:23",
   "prev_buy": 20.0469318,
   "prev_sell": 19.04010975
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.982424,
-  "buy": 19.204952,
-  "date": "2022-11-03 16:30:23",
+  "sell": 19.992588,
+  "buy": 19.1873552,
+  "date": "2022-11-03 17:30:23",
   "prev_buy": 20.00559792,
   "prev_sell": 19.23887472
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.89592,
-  "buy": 19.01636,
-  "date": "2022-11-03 16:30:24",
+  "sell": 19.90604,
+  "buy": 18.998936,
+  "date": "2022-11-03 17:30:24",
   "prev_buy": 19.9189936,
   "prev_sell": 19.0499496
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 20.07286,
-  "buy": 18.800265,
-  "date": "2022-11-03 16:30:24",
+  "sell": 20.08307,
+  "buy": 18.783039,
+  "date": "2022-11-03 17:30:24",
   "prev_buy": 20.0961388,
   "prev_sell": 18.8334729
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 20.03354,
-  "buy": 19.232455,
-  "date": "2022-11-03 16:30:25",
+  "sell": 20.04373,
+  "buy": 19.214833,
+  "date": "2022-11-03 17:30:25",
   "prev_buy": 20.0567732,
   "prev_sell": 19.2664263
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.1515,
-  "buy": 18.8592,
-  "date": "2022-11-03 16:30:26",
+  "sell": 20.16175,
+  "buy": 18.84192,
+  "date": "2022-11-03 17:30:25",
   "prev_buy": 20.17487,
   "prev_sell": 18.892512
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.121027,
-  "buy": 19.1833425,
-  "date": "2022-11-03 16:30:26",
+  "sell": 20.1312615,
+  "buy": 19.1657655,
+  "date": "2022-11-03 17:30:26",
   "prev_buy": 20.14436166,
   "prev_sell": 19.21722705
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 20.10235,
-  "buy": 19.2029875,
-  "date": "2022-11-03 16:30:26",
+  "sell": 20.112575,
+  "buy": 19.1853925,
+  "date": "2022-11-03 17:30:26",
   "prev_buy": 20.125663,
   "prev_sell": 19.23690675
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 20.10235,
-  "buy": 19.193165,
-  "date": "2022-11-03 16:30:27",
+  "sell": 20.112575,
+  "buy": 19.175579,
+  "date": "2022-11-03 17:30:27",
   "prev_buy": 20.125663,
   "prev_sell": 19.2270669
 },{
