commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44603,6 +44603,10 @@
     {
       "Date": "2022-11-03 14:00",
       "Rate": "19.6550"
+    },
+    {
+      "Date": "2022-11-03 15:00",
+      "Rate": "19.6484"
     }
   ]
 }
