commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44607,6 +44607,10 @@
     {
       "Date": "2022-11-03 15:00",
       "Rate": "19.6484"
+    },
+    {
+      "Date": "2022-11-03 16:00",
+      "Rate": "19.6551"
     }
   ]
 }
