--- a/indexRt.html
+++ b/indexRt.html
@@ -44611,6 +44611,10 @@
     {
       "Date": "2022-11-03 16:00",
       "Rate": "19.6551"
+    },
+    {
+      "Date": "2022-11-03 17:00",
+      "Rate": "19.6728"
     }
   ]
 }
