commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44615,6 +44615,10 @@
     {
       "Date": "2022-11-03 17:00",
       "Rate": "19.6728"
+    },
+    {
+      "Date": "2022-11-03 18:00",
+      "Rate": "19.6649"
     }
   ]
 }
