--- a/indexRt.html
+++ b/indexRt.html
@@ -44619,6 +44619,10 @@
     {
       "Date": "2022-11-03 18:00",
       "Rate": "19.6649"
+    },
+    {
+      "Date": "2022-11-03 19:00",
+      "Rate": "19.6403"
     }
   ]
 }
