commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44623,6 +44623,10 @@
     {
       "Date": "2022-11-03 19:00",
       "Rate": "19.6403"
+    },
+    {
+      "Date": "2022-11-03 20:00",
+      "Rate": "19.6354"
     }
   ]
 }
