--- a/indexRt.html
+++ b/indexRt.html
@@ -44627,6 +44627,10 @@
     {
       "Date": "2022-11-03 20:00",
       "Rate": "19.6354"
+    },
+    {
+      "Date": "2022-11-03 21:00",
+      "Rate": "19.6305"
     }
   ]
 }
