commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44631,6 +44631,10 @@
     {
       "Date": "2022-11-03 21:00",
       "Rate": "19.6305"
+    },
+    {
+      "Date": "2022-11-03 22:00",
+      "Rate": "19.6042"
     }
   ]
 }
