commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44635,6 +44635,10 @@
     {
       "Date": "2022-11-03 22:00",
       "Rate": "19.6042"
+    },
+    {
+      "Date": "2022-11-03 23:00",
+      "Rate": "19.6206"
     }
   ]
 }
