commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44639,6 +44639,10 @@
     {
       "Date": "2022-11-03 23:00",
       "Rate": "19.6206"
+    },
+    {
+      "Date": "2022-11-04 00:00",
+      "Rate": "19.6083"
     }
   ]
 }
