commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44643,6 +44643,10 @@
     {
       "Date": "2022-11-04 00:00",
       "Rate": "19.6083"
+    },
+    {
+      "Date": "2022-11-04 01:00",
+      "Rate": "19.6213"
     }
   ]
 }
