commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44647,6 +44647,10 @@
     {
       "Date": "2022-11-04 01:00",
       "Rate": "19.6213"
+    },
+    {
+      "Date": "2022-11-04 02:00",
+      "Rate": "19.5945"
     }
   ]
 }
