--- a/indexRt.html
+++ b/indexRt.html
@@ -44651,6 +44651,10 @@
     {
       "Date": "2022-11-04 02:00",
       "Rate": "19.5945"
+    },
+    {
+      "Date": "2022-11-04 03:00",
+      "Rate": "19.5978"
     }
   ]
 }
