--- a/indexRt.html
+++ b/indexRt.html
@@ -44655,6 +44655,10 @@
     {
       "Date": "2022-11-04 03:00",
       "Rate": "19.5978"
+    },
+    {
+      "Date": "2022-11-04 04:00",
+      "Rate": "19.5938"
     }
   ]
 }
