commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44659,6 +44659,10 @@
     {
       "Date": "2022-11-04 04:00",
       "Rate": "19.5938"
+    },
+    {
+      "Date": "2022-11-04 05:00",
+      "Rate": "19.6019"
     }
   ]
 }
