--- a/indexRt.html
+++ b/indexRt.html
@@ -44663,6 +44663,10 @@
     {
       "Date": "2022-11-04 05:00",
       "Rate": "19.6019"
+    },
+    {
+      "Date": "2022-11-04 06:00",
+      "Rate": "19.5107"
     }
   ]
 }
