commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44667,6 +44667,10 @@
     {
       "Date": "2022-11-04 06:00",
       "Rate": "19.5107"
+    },
+    {
+      "Date": "2022-11-04 07:00",
+      "Rate": "19.5173"
     }
   ]
 }
