--- a/indexRt.html
+++ b/indexRt.html
@@ -44671,6 +44671,10 @@
     {
       "Date": "2022-11-04 07:00",
       "Rate": "19.5173"
+    },
+    {
+      "Date": "2022-11-04 08:00",
+      "Rate": "19.4724"
     }
   ]
 }
