commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44675,6 +44675,10 @@
     {
       "Date": "2022-11-04 08:00",
       "Rate": "19.4724"
+    },
+    {
+      "Date": "2022-11-04 09:00",
+      "Rate": "19.5333"
     }
   ]
 }
