commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44679,6 +44679,10 @@
     {
       "Date": "2022-11-04 09:00",
       "Rate": "19.5333"
+    },
+    {
+      "Date": "2022-11-04 10:00",
+      "Rate": "19.5420"
     }
   ]
 }
