--- a/indexRt.html
+++ b/indexRt.html
@@ -44683,6 +44683,10 @@
     {
       "Date": "2022-11-04 10:00",
       "Rate": "19.5420"
+    },
+    {
+      "Date": "2022-11-04 11:00",
+      "Rate": "19.5715"
     }
   ]
 }
