--- a/indexRt.html
+++ b/indexRt.html
@@ -44687,6 +44687,10 @@
     {
       "Date": "2022-11-04 11:00",
       "Rate": "19.5715"
+    },
+    {
+      "Date": "2022-11-04 12:00",
+      "Rate": "19.5219"
     }
   ]
 }
