commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44691,6 +44691,10 @@
     {
       "Date": "2022-11-04 12:00",
       "Rate": "19.5219"
+    },
+    {
+      "Date": "2022-11-04 13:00",
+      "Rate": "19.5173"
     }
   ]
 }
