--- a/indexRt.html
+++ b/indexRt.html
@@ -44695,6 +44695,10 @@
     {
       "Date": "2022-11-04 13:00",
       "Rate": "19.5173"
+    },
+    {
+      "Date": "2022-11-04 14:00",
+      "Rate": "19.5304"
     }
   ]
 }
