commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,11 +33,11 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.89009,
-  "buy": 19.10902,
-  "date": "2022-11-04 17:20:10",
-  "prev_buy": 20.00405,
-  "prev_sell": 19.2521
+  "sell": 19.871775,
+  "buy": 19.1247,
+  "date": "2022-11-04 17:40:11",
+  "prev_buy": 20.014225,
+  "prev_sell": 19.23446
 },{
   "bank_id": 6,
   "bank_name": "BANXICO",
@@ -57,11 +57,11 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.79235,
-  "buy": 19.206515,
-  "date": "2022-11-04 17:20:13",
-  "prev_buy": 19.90575,
-  "prev_sell": 19.350325
+  "sell": 19.774125,
+  "buy": 19.222275,
+  "date": "2022-11-04 17:40:13",
+  "prev_buy": 19.915875,
+  "prev_sell": 19.332595
 },{
   "bank_id": 9,
   "bank_name": "BAJIO",
@@ -89,11 +89,11 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.93896,
-  "buy": 19.10902,
-  "date": "2022-11-04 17:20:15",
-  "prev_buy": 20.0532,
-  "prev_sell": 19.2521
+  "sell": 19.9206,
+  "buy": 19.1247,
+  "date": "2022-11-04 17:40:16",
+  "prev_buy": 20.0634,
+  "prev_sell": 19.23446
 },{
   "bank_id": 13,
   "bank_name": "BANCOAZTECA",
@@ -108,8 +108,8 @@
   "sell": 20.22,
   "buy": 19.69,
   "date": "2022-11-04 17:00:18",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
@@ -161,91 +161,91 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.860768,
-  "buy": 19.0017755,
-  "date": "2022-11-04 17:20:21",
-  "prev_buy": 19.97456,
-  "prev_sell": 19.1440525
+  "sell": 19.84248,
+  "buy": 19.0173675,
+  "date": "2022-11-04 17:40:23",
+  "prev_buy": 19.98472,
+  "prev_sell": 19.1265115
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.899864,
-  "buy": 19.0407735,
-  "date": "2022-11-04 17:20:22",
-  "prev_buy": 20.01388,
-  "prev_sell": 19.1833425
+  "sell": 19.88154,
+  "buy": 19.0563975,
+  "date": "2022-11-04 17:40:23",
+  "prev_buy": 20.02406,
+  "prev_sell": 19.1657655
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.909638,
-  "buy": 18.8652825,
-  "date": "2022-11-04 17:20:22",
-  "prev_buy": 20.02371,
-  "prev_sell": 19.0065375
+  "sell": 19.891305,
+  "buy": 18.8807625,
+  "date": "2022-11-04 17:40:24",
+  "prev_buy": 20.033895,
+  "prev_sell": 18.9891225
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.8685872,
-  "buy": 19.0622224,
-  "date": "2022-11-04 17:20:23",
-  "prev_buy": 19.982424,
-  "prev_sell": 19.204952
+  "sell": 19.850292,
+  "buy": 19.077864,
+  "date": "2022-11-04 17:40:25",
+  "prev_buy": 19.992588,
+  "prev_sell": 19.1873552
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.782576,
-  "buy": 18.875032,
-  "date": "2022-11-04 17:20:24",
-  "prev_buy": 19.89592,
-  "prev_sell": 19.01636
+  "sell": 19.76436,
+  "buy": 18.89052,
+  "date": "2022-11-04 17:40:25",
+  "prev_buy": 19.90604,
+  "prev_sell": 18.998936
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.958508,
-  "buy": 18.660543,
-  "date": "2022-11-04 17:20:24",
-  "prev_buy": 20.07286,
-  "prev_sell": 18.800265
+  "sell": 19.94013,
+  "buy": 18.675855,
+  "date": "2022-11-04 17:40:26",
+  "prev_buy": 20.08307,
+  "prev_sell": 18.783039
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.919412,
-  "buy": 19.089521,
-  "date": "2022-11-04 17:20:25",
-  "prev_buy": 20.03354,
-  "prev_sell": 19.232455
+  "sell": 19.90107,
+  "buy": 19.105185,
+  "date": "2022-11-04 17:40:26",
+  "prev_buy": 20.04373,
+  "prev_sell": 19.214833
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 20.0367,
-  "buy": 18.71904,
-  "date": "2022-11-04 17:20:25",
-  "prev_buy": 20.1515,
-  "prev_sell": 18.8592
+  "sell": 20.01825,
+  "buy": 18.7344,
+  "date": "2022-11-04 17:40:27",
+  "prev_buy": 20.16175,
+  "prev_sell": 18.84192
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 20.0064006,
-  "buy": 19.0407735,
-  "date": "2022-11-04 17:20:25",
-  "prev_buy": 20.121027,
-  "prev_sell": 19.1833425
+  "sell": 19.9879785,
+  "buy": 19.0563975,
+  "date": "2022-11-04 17:40:28",
+  "prev_buy": 20.1312615,
+  "prev_sell": 19.1657655
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.98783,
-  "buy": 19.0602725,
-  "date": "2022-11-04 17:20:26",
-  "prev_buy": 20.10235,
-  "prev_sell": 19.2029875
+  "sell": 19.969425,
+  "buy": 19.0759125,
+  "date": "2022-11-04 17:40:28",
+  "prev_buy": 20.112575,
+  "prev_sell": 19.1853925
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.98783,
-  "buy": 19.050523,
-  "date": "2022-11-04 17:20:27",
-  "prev_buy": 20.10235,
-  "prev_sell": 19.193165
+  "sell": 19.969425,
+  "buy": 19.066155,
+  "date": "2022-11-04 17:40:29",
+  "prev_buy": 20.112575,
+  "prev_sell": 19.175579
 },{
   "bank_id": 32,
   "bank_name": "BANORTE",
