--- a/indexRt.html
+++ b/indexRt.html
@@ -44699,6 +44699,10 @@
     {
       "Date": "2022-11-04 14:00",
       "Rate": "19.5304"
+    },
+    {
+      "Date": "2022-11-04 15:00",
+      "Rate": "19.5247"
     }
   ]
 }
