--- a/indexRt.html
+++ b/indexRt.html
@@ -44703,6 +44703,10 @@
     {
       "Date": "2022-11-04 15:00",
       "Rate": "19.5247"
+    },
+    {
+      "Date": "2022-11-04 16:00",
+      "Rate": "19.5258"
     }
   ]
 }
