commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44707,6 +44707,10 @@
     {
       "Date": "2022-11-04 16:00",
       "Rate": "19.5258"
+    },
+    {
+      "Date": "2022-11-07 08:00",
+      "Rate": "19.4498"
     }
   ]
 }
