commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44711,6 +44711,10 @@
     {
       "Date": "2022-11-07 08:00",
       "Rate": "19.4498"
+    },
+    {
+      "Date": "2022-11-07 09:00",
+      "Rate": "19.4693"
     }
   ]
 }
