commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44715,6 +44715,10 @@
     {
       "Date": "2022-11-07 09:00",
       "Rate": "19.4693"
+    },
+    {
+      "Date": "2022-11-07 10:00",
+      "Rate": "19.4684"
     }
   ]
 }
