commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44719,6 +44719,10 @@
     {
       "Date": "2022-11-07 10:00",
       "Rate": "19.4684"
+    },
+    {
+      "Date": "2022-11-07 11:00",
+      "Rate": "19.4358"
     }
   ]
 }
