commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44723,6 +44723,10 @@
     {
       "Date": "2022-11-07 11:00",
       "Rate": "19.4358"
+    },
+    {
+      "Date": "2022-11-07 12:00",
+      "Rate": "19.4487"
     }
   ]
 }
