commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44727,6 +44727,10 @@
     {
       "Date": "2022-11-07 12:00",
       "Rate": "19.4487"
+    },
+    {
+      "Date": "2022-11-07 13:00",
+      "Rate": "19.4475"
     }
   ]
 }
