--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -33,9 +33,9 @@
 },{
   "bank_id": 5,
   "bank_name": "SCOTIABANK",
-  "sell": 19.790375,
-  "buy": 19.0463,
-  "date": "2022-11-07 17:00:10",
+  "sell": 19.7913925,
+  "buy": 19.05022,
+  "date": "2022-11-07 17:10:11",
   "prev_buy": 19.871775,
   "prev_sell": 19.1247
 },{
@@ -57,9 +57,9 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.693125,
-  "buy": 19.143475,
-  "date": "2022-11-07 17:00:13",
+  "sell": 19.6941375,
+  "buy": 19.147415,
+  "date": "2022-11-07 17:10:14",
   "prev_buy": 19.774125,
   "prev_sell": 19.222275
 },{
@@ -89,9 +89,9 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.839,
-  "buy": 19.0463,
-  "date": "2022-11-07 17:00:15",
+  "sell": 19.84002,
+  "buy": 19.05022,
+  "date": "2022-11-07 17:10:17",
   "prev_buy": 19.9206,
   "prev_sell": 19.1247
 },{
@@ -113,9 +113,9 @@
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.9511,
-  "buy": 18.9406,
-  "date": "2022-11-07 17:00:16",
+  "sell": 19.956,
+  "buy": 18.939,
+  "date": "2022-11-07 17:10:19",
   "prev_buy": 20.072,
   "prev_sell": 19.04
 },{
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.759168,
-  "buy": 18.94428,
-  "date": "2022-11-07 17:00:22",
+  "sell": 19.762216,
+  "buy": 18.9433055,
+  "date": "2022-11-07 17:10:23",
   "prev_buy": 19.84248,
   "prev_sell": 19.0173675
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.798064,
-  "buy": 18.98316,
-  "date": "2022-11-07 17:00:22",
+  "sell": 19.801118,
+  "buy": 18.9821835,
+  "date": "2022-11-07 17:10:23",
   "prev_buy": 19.88154,
   "prev_sell": 19.0563975
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.807788,
-  "buy": 18.8082,
-  "date": "2022-11-07 17:00:23",
+  "sell": 19.8108435,
+  "buy": 18.8072325,
+  "date": "2022-11-07 17:10:24",
   "prev_buy": 19.891305,
   "prev_sell": 18.8807625
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.7669472,
-  "buy": 19.004544,
-  "date": "2022-11-07 17:00:24",
+  "sell": 19.7699964,
+  "buy": 19.0035664,
+  "date": "2022-11-07 17:10:24",
   "prev_buy": 19.850292,
   "prev_sell": 19.077864
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.681376,
-  "buy": 18.81792,
-  "date": "2022-11-07 17:00:24",
+  "sell": 19.684412,
+  "buy": 18.816952,
+  "date": "2022-11-07 17:10:25",
   "prev_buy": 19.76436,
   "prev_sell": 18.89052
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.856408,
-  "buy": 18.60408,
-  "date": "2022-11-07 17:00:25",
+  "sell": 19.859471,
+  "buy": 18.603123,
+  "date": "2022-11-07 17:10:25",
   "prev_buy": 19.94013,
   "prev_sell": 18.675855
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.817512,
-  "buy": 19.03176,
-  "date": "2022-11-07 17:00:25",
+  "sell": 19.820569,
+  "buy": 19.030781,
+  "date": "2022-11-07 17:10:26",
   "prev_buy": 19.90107,
   "prev_sell": 19.105185
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.9342,
-  "buy": 18.6624,
-  "date": "2022-11-07 17:00:26",
+  "sell": 19.937275,
+  "buy": 18.66144,
+  "date": "2022-11-07 17:10:26",
   "prev_buy": 20.01825,
   "prev_sell": 18.7344
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.9040556,
-  "buy": 18.98316,
-  "date": "2022-11-07 17:00:27",
+  "sell": 19.90712595,
+  "buy": 18.9821835,
+  "date": "2022-11-07 17:10:27",
   "prev_buy": 19.9879785,
   "prev_sell": 19.0563975
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.88558,
-  "buy": 19.0026,
-  "date": "2022-11-07 17:00:27",
+  "sell": 19.8886475,
+  "buy": 19.0016225,
+  "date": "2022-11-07 17:10:28",
   "prev_buy": 19.969425,
   "prev_sell": 19.0759125
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.88558,
-  "buy": 18.99288,
-  "date": "2022-11-07 17:00:27",
+  "sell": 19.8886475,
+  "buy": 18.991903,
+  "date": "2022-11-07 17:10:28",
   "prev_buy": 19.969425,
   "prev_sell": 19.066155
 },{
