--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -57,9 +57,9 @@
 },{
   "bank_id": 8,
   "bank_name": "BANSI",
-  "sell": 19.70325,
-  "buy": 19.14249,
-  "date": "2022-11-07 17:20:12",
+  "sell": 19.693125,
+  "buy": 19.143475,
+  "date": "2022-11-07 17:30:14",
   "prev_buy": 19.774125,
   "prev_sell": 19.222275
 },{
@@ -89,9 +89,9 @@
 },{
   "bank_id": 12,
   "bank_name": "FAMSA",
-  "sell": 19.8492,
-  "buy": 19.04532,
-  "date": "2022-11-07 17:20:15",
+  "sell": 19.839,
+  "buy": 19.0463,
+  "date": "2022-11-07 17:30:16",
   "prev_buy": 19.9206,
   "prev_sell": 19.1247
 },{
@@ -105,17 +105,17 @@
 },{
   "bank_id": 14,
   "bank_name": "MONEX",
-  "sell": 20.22,
-  "buy": 19.69,
-  "date": "2022-11-07 16:50:17",
-  "prev_buy": 20.33,
-  "prev_sell": 19.81
+  "sell": 20.33,
+  "buy": 19.81,
+  "date": "2022-11-07 17:30:17",
+  "prev_buy": 20.22,
+  "prev_sell": 19.69
 },{
   "bank_id": 15,
   "bank_name": "BANJERCITO",
-  "sell": 19.9551,
-  "buy": 18.9446,
-  "date": "2022-11-07 17:20:16",
+  "sell": 19.9562,
+  "buy": 18.9457,
+  "date": "2022-11-07 17:30:18",
   "prev_buy": 20.072,
   "prev_sell": 19.04
 },{
@@ -161,89 +161,89 @@
 },{
   "bank_id": 21,
   "bank_name": "CIBANCO",
-  "sell": 19.77136,
-  "buy": 18.938433,
-  "date": "2022-11-07 17:20:21",
+  "sell": 19.7612,
+  "buy": 18.9394075,
+  "date": "2022-11-07 17:30:25",
   "prev_buy": 19.84248,
   "prev_sell": 19.0173675
 },{
   "bank_id": 22,
   "bank_name": "COMPARTAMOS",
-  "sell": 19.81028,
-  "buy": 18.977301,
-  "date": "2022-11-07 17:20:22",
+  "sell": 19.8001,
+  "buy": 18.9782775,
+  "date": "2022-11-07 17:30:26",
   "prev_buy": 19.88154,
   "prev_sell": 19.0563975
 },{
   "bank_id": 23,
   "bank_name": "BANCOPPEL",
-  "sell": 19.82001,
-  "buy": 18.802395,
-  "date": "2022-11-07 17:20:22",
+  "sell": 19.809825,
+  "buy": 18.8033625,
+  "date": "2022-11-07 17:30:26",
   "prev_buy": 19.891305,
   "prev_sell": 18.8807625
 },{
   "bank_id": 24,
   "bank_name": "BANCREA",
-  "sell": 19.779144,
-  "buy": 18.9986784,
-  "date": "2022-11-07 17:20:23",
+  "sell": 19.76898,
+  "buy": 18.999656,
+  "date": "2022-11-07 17:30:27",
   "prev_buy": 19.850292,
   "prev_sell": 19.077864
 },{
   "bank_id": 25,
   "bank_name": "BANKAOOL",
-  "sell": 19.69352,
-  "buy": 18.812112,
-  "date": "2022-11-07 17:20:23",
+  "sell": 19.6834,
+  "buy": 18.81308,
+  "date": "2022-11-07 17:30:27",
   "prev_buy": 19.76436,
   "prev_sell": 18.89052
 },{
   "bank_id": 26,
   "bank_name": "BANSEFI",
-  "sell": 19.86866,
-  "buy": 18.598338,
-  "date": "2022-11-07 17:20:24",
+  "sell": 19.85845,
+  "buy": 18.599295,
+  "date": "2022-11-07 17:30:28",
   "prev_buy": 19.94013,
   "prev_sell": 18.675855
 },{
   "bank_id": 27,
   "bank_name": "BANCOFITERRA",
-  "sell": 19.82974,
-  "buy": 19.025886,
-  "date": "2022-11-07 17:20:24",
+  "sell": 19.81955,
+  "buy": 19.026865,
+  "date": "2022-11-07 17:30:28",
   "prev_buy": 19.90107,
   "prev_sell": 19.105185
 },{
   "bank_id": 28,
   "bank_name": "BANCAMIFEL",
-  "sell": 19.9465,
-  "buy": 18.65664,
-  "date": "2022-11-07 17:20:25",
+  "sell": 19.93625,
+  "buy": 18.6576,
+  "date": "2022-11-07 17:30:29",
   "prev_buy": 20.01825,
   "prev_sell": 18.7344
 },{
   "bank_id": 29,
   "bank_name": "AMERICAN EXPRESS",
-  "sell": 19.916337,
-  "buy": 18.977301,
-  "date": "2022-11-07 17:20:25",
+  "sell": 19.9061025,
+  "buy": 18.9782775,
+  "date": "2022-11-07 17:30:30",
   "prev_buy": 19.9879785,
   "prev_sell": 19.0563975
 },{
   "bank_id": 30,
   "bank_name": "VISA",
-  "sell": 19.89785,
-  "buy": 18.996735,
-  "date": "2022-11-07 17:20:26",
+  "sell": 19.887625,
+  "buy": 18.9977125,
+  "date": "2022-11-07 17:30:30",
   "prev_buy": 19.969425,
   "prev_sell": 19.0759125
 },{
   "bank_id": 31,
   "bank_name": "MASTERCARD",
-  "sell": 19.89785,
-  "buy": 18.987018,
-  "date": "2022-11-07 17:20:27",
+  "sell": 19.887625,
+  "buy": 18.987995,
+  "date": "2022-11-07 17:30:30",
   "prev_buy": 19.969425,
   "prev_sell": 19.066155
 },{
