--- a/indexRt.html
+++ b/indexRt.html
@@ -44731,6 +44731,10 @@
     {
       "Date": "2022-11-07 13:00",
       "Rate": "19.4475"
+    },
+    {
+      "Date": "2022-11-07 14:00",
+      "Rate": "19.4539"
     }
   ]
 }
