commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44735,6 +44735,10 @@
     {
       "Date": "2022-11-07 14:00",
       "Rate": "19.4539"
+    },
+    {
+      "Date": "2022-11-07 15:00",
+      "Rate": "19.4492"
     }
   ]
 }
