--- a/indexRt.html
+++ b/indexRt.html
@@ -44739,6 +44739,10 @@
     {
       "Date": "2022-11-07 15:00",
       "Rate": "19.4492"
+    },
+    {
+      "Date": "2022-11-07 16:00",
+      "Rate": "19.4582"
     }
   ]
 }
