--- a/indexRt.html
+++ b/indexRt.html
@@ -44743,6 +44743,10 @@
     {
       "Date": "2022-11-07 16:00",
       "Rate": "19.4582"
+    },
+    {
+      "Date": "2022-11-07 17:00",
+      "Rate": "19.4429"
     }
   ]
 }
