commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44747,6 +44747,10 @@
     {
       "Date": "2022-11-07 17:00",
       "Rate": "19.4429"
+    },
+    {
+      "Date": "2022-11-07 18:00",
+      "Rate": "19.4611"
     }
   ]
 }
