commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44751,6 +44751,10 @@
     {
       "Date": "2022-11-07 18:00",
       "Rate": "19.4611"
+    },
+    {
+      "Date": "2022-11-07 19:00",
+      "Rate": "19.4556"
     }
   ]
 }
