commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44755,6 +44755,10 @@
     {
       "Date": "2022-11-07 19:00",
       "Rate": "19.4556"
+    },
+    {
+      "Date": "2022-11-07 20:00",
+      "Rate": "19.4573"
     }
   ]
 }
