commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44759,6 +44759,10 @@
     {
       "Date": "2022-11-07 20:00",
       "Rate": "19.4573"
+    },
+    {
+      "Date": "2022-11-07 21:00",
+      "Rate": "19.4650"
     }
   ]
 }
