commit from netcore service

--- a/indexDllIos.html
+++ b/indexDllIos.html
@@ -129,8 +129,8 @@
 },{
   "bank_id": 17,
   "bank_name": "DOF",
-  "sell": 19.5585,
-  "buy": 19.5585,
+  "sell": " 19.5202",
+  "buy": " 19.5202",
   "date": "2022-06-03 07:10:28",
   "prev_buy": 19.5585,
   "prev_sell": 19.5585
@@ -153,8 +153,8 @@
 },{
   "bank_id": 20,
   "bank_name": "SAT",
-  "sell": 19.5202,
-  "buy": 19.5202,
+  "sell": " 19.5202",
+  "buy": " 19.5202",
   "date": "2022-11-07 02:10:23",
   "prev_buy": 19.6673,
   "prev_sell": 19.6673
