commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44763,6 +44763,10 @@
     {
       "Date": "2022-11-07 21:00",
       "Rate": "19.4650"
+    },
+    {
+      "Date": "2022-11-07 22:00",
+      "Rate": "19.4730"
     }
   ]
 }
