--- a/indexRt.html
+++ b/indexRt.html
@@ -44767,6 +44767,10 @@
     {
       "Date": "2022-11-07 22:00",
       "Rate": "19.4730"
+    },
+    {
+      "Date": "2022-11-07 23:00",
+      "Rate": "19.4676"
     }
   ]
 }
