commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44771,6 +44771,10 @@
     {
       "Date": "2022-11-07 23:00",
       "Rate": "19.4676"
+    },
+    {
+      "Date": "2022-11-08 00:00",
+      "Rate": "19.4732"
     }
   ]
 }
