commit from netcore service

--- a/indexRt.html
+++ b/indexRt.html
@@ -44775,6 +44775,10 @@
     {
       "Date": "2022-11-08 00:00",
       "Rate": "19.4732"
+    },
+    {
+      "Date": "2022-11-08 01:00",
+      "Rate": "19.4886"
     }
   ]
 }
